--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -52,6 +52,7 @@ var dockerSearchFlag = false;
 var ca_WarningItems = [];
 var currentWarning = 0;
 var warningInterval;
+var dockerNotEnabled;
 
 $(function(){
 	caPluginUpdateCheck("community.applications.plg",{
@@ -459,7 +460,7 @@ function doSearch(button,newSearch) {
 		return;
 	}
 	var sortOrder = getSortOrder();
-	if ( "<?=$cfg['dockerSearch']?>" == "yes" ) {
+	if ( "<?=$cfg['dockerSearch']?>" == "yes" && ! dockerNotEnabled) {
 		$('.dockerSearch').show();
 	}
 
