--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -755,6 +755,7 @@ function deletePrivateApp(path,name,author) {
 			swal("Removing "+name,"","info");
 			getSelectedApps();
 			post({action:'removePrivateApp',path:path},function(result) {
+				getCategories();
 				myCloseAlert();
 				refreshDisplay();
 				enableSearch();
