When changing sort order, go back to page 1

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -215,6 +215,7 @@ $(function(){
 	});
 	$(".sortIcons").click(function() {
 		enableSortIcon(this);
+		data.currentpage = 1;
 		changeSortOrder();
 		$("#sortIconArea").toggle("slow");
 	});
