spinner wouldn't disappear when pinning

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -1253,7 +1253,7 @@ function post(options,callback) {
 		$.post(URL,options);
 		postCount--;
 		if ( postCount < 0 ) postCount = 0;
-		if ( postCount == 0 && ! noSpinner) {
+		if ( postCount == 0) {
 			myCloseSpinner();
 		}
 	}
